Styles corrected for register button on mobile view.

--- a/css/cid.css
+++ b/css/cid.css
@@ -210,6 +210,7 @@ a:hover {
 .register a {
     margin-left: 15px;
     margin-right: 15px;
+    white-space: nowrap;
 
     font-size: 75%;
     background: #57C88C;
@@ -217,6 +218,12 @@ a:hover {
     color: #fff;
     border-radius: 50px;
     text-decoration: none;
+}
+@media (max-width: 600px) {
+    .register a {
+       display: inline-block;
+       margin: 10px auto;
+    }
 }
 
 .register a:hover {
@@ -270,4 +277,9 @@ label {
   margin-top: 1.5em;
   font-size: 0.9em;
 }
-
+@media (max-width: 600px) {
+  .rules p {
+      font-size: 1.2em;
+      line-height: 1.4em;
+  }
+}
